# validador_assinatura_iti

./: .gitignore  API_ENDPOINTS_DOCUMENTATION.md  API_INTEGRATION.md  README.md  README_PDF_DOWNLOAD.md  download_pdf_example.py  tkinter_gui.py  validator_api.py
rust/: Cargo.toml  README.md
rust/src/: api.rs  gui.rs  main.rs  types.rs
